--- a/index.html
+++ b/index.html
@@ -3158,8 +3158,9 @@
                                     </div>
                                             <div class="accordion-content">
                                                 <a href="company/message.html" class="index-more">-グループ代表挨拶</a>
-                                                <a href="company/mission.html" class="index-more">-グループミッション・経営理念</a>
+                                                <a href="company/mission.html" class="index-more">-グループビジョン・経営理念</a>
                                                 <a href="company/summary.html" class="index-more">-会社概要</a>
+                                                <a href="company/group.html" class="index-more">-グループ会社一覧</a>
                                                 <a href="company/partnar.html" class="index-more">-提携先企業一覧</a>
                                               </div>
                                 </li>
@@ -3462,7 +3463,7 @@
                                                                                                 <!-- <p>トランジットグループは、クリエイティブ、オペレーション、イベント、マネージメントサポートといった様々なプロフェッショナル集団が連動し、“ワクワク体験”ができる「遊び場」を提供。新しいライフスタイルを創り、文化やコミュニティが活性化する事で、社会にポジティブな変化をもたらす未来を目指しています。</p> -->
                                                                                                 <div class="wp-block-snow-monkey-blocks-buttons smb-buttons is-content-justification-right is-layout-flex wp-container-snow-monkey-blocks-buttons-is-layout-2 wp-block-buttons-is-layout-flex">
                                                                                                     <div class="wp-block-snow-monkey-blocks-btn smb-btn-wrapper is-style-text thd_mod-arw__link --large">
-                                                                                                        <a class="smb-btn" href="index/vision.html">
+                                                                                                        <a class="smb-btn" href="company/mission.html">
                                                                                                             <span class="smb-btn__label">ビジョンを詳しく見る</span>
                                                                                                         </a>
                                                                                                     </div>
@@ -3566,7 +3567,7 @@
                                                                     </div>
                                                                     <div class="wp-block-snow-monkey-blocks-buttons smb-buttons is-content-justification-center is-layout-flex wp-container-snow-monkey-blocks-buttons-is-layout-4 wp-block-buttons-is-layout-flex">
                                                                         <div class="wp-block-snow-monkey-blocks-btn smb-btn-wrapper is-style-text thd_mod-arw__link --large">
-                                                                            <a class="smb-btn" href="business/group.html">
+                                                                            <a class="smb-btn" href="company/group.html">
                                                                                 <span class="smb-btn__label">グループ会社を詳しく見る</span>
                                                                             </a>
                                                                         </div>
@@ -3668,8 +3669,9 @@
                         </div>
                                 <div class="accordion-content">
                                     <a href="company/message.html" class="index-more">-グループ代表挨拶</a>
-                                    <a href="company/mission.html" class="index-more">-グループミッション・経営理念</a>
+                                    <a href="company/mission.html" class="index-more">-グループビジョン・経営理念</a>
                                     <a href="company/summary.html" class="index-more">-会社概要</a>
+                                    <a href="company/group.html" class="index-more">-グループ会社一覧</a>
                                     <a href="company/partnar.html" class="index-more">-提携先企業一覧</a>
                                   </div>
                     </li>
