--- a/contact/cooperation.html
+++ b/contact/cooperation.html
@@ -51,8 +51,9 @@
                         </div>
                                 <div class="accordion-content">
                                     <a href="../company/message.html" class="index-more">-グループCEOメッセージ</a>
-                                    <a href="../company/mission.html" class="index-more">-グループミッション・経営理念</a>
+                                    <a href="../company/mission.html" class="index-more">-グループビジョン・経営理念</a>
                                     <a href="../company/summary.html" class="index-more">-会社概要</a>
+                                    <a href="../company/group.html" class="index-more">-グループ会社一覧</a>
                                     <a href="../company/partnar.html" class="index-more">-提携先企業一覧</a>
                                   </div>
                     </li>
@@ -215,8 +216,9 @@
               </div>
                       <div class="accordion-content">
                           <a href="../company/message.html" class="index-more">-グループ代表挨拶</a>
-                          <a href="../company/mission.html" class="index-more">-グループミッション・経営理念</a>
+                          <a href="../company/mission.html" class="index-more">-グループビジョン・経営理念</a>
                           <a href="../company/summary.html" class="index-more">-会社概要</a>
+                          <a href="../company/group.html" class="index-more">-グループ会社一覧</a>
                           <a href="../company/partnar.html" class="index-more">-提携先企業一覧</a>
                         </div>
           </li>
