--- a/company/group.html
+++ b/company/group.html
@@ -579,7 +579,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 
-<p class="thd_mod-arw__link"><a href="https://transit-creative.com/" target="_blank" rel="noreferrer noopener">WEB SITE</a></p>
+<p class="thd_mod-arw__link"><a href="https://walk-ynwa.com/" target="_blank" rel="noreferrer noopener">WEB SITE</a></p>
 </div>
 
 
@@ -603,7 +603,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 
-<p class="thd_mod-arw__link"><a href="https://transithospitalitymanagement.com/" target="_blank" rel="noreferrer noopener">WEB SITE</a></p>
+<p class="thd_mod-arw__link"><a href="../preparation.html" target="_blank" rel="noreferrer noopener">WEB SITE</a></p>
 </div>
 
 
@@ -629,7 +629,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 
-<p class="thd_mod-arw__link"><a href="https://transitoperationservice.com/" target="_blank" rel="noreferrer noopener">WEB SITE</a></p>
+<p class="thd_mod-arw__link"><a href="../preparation.html" target="_blank" rel="noreferrer noopener">WEB SITE</a></p>
 </div>
 
 
@@ -653,7 +653,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 
-<p class="thd_mod-arw__link"><a href="https://transitcrew.com/" target="_blank" rel="noreferrer noopener">WEB SITE</a></p>
+<p class="thd_mod-arw__link"><a href="https://activeoffice.tokyo/" target="_blank" rel="noreferrer noopener">WEB SITE</a></p>
 </div>
 
 
@@ -679,7 +679,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 
-<p class="thd_mod-arw__link"><a href="https://transit-careerup.com/" target="_blank" rel="noreferrer noopener">WEB SITE</a></p>
+<p class="thd_mod-arw__link"><a href="https://financialservice.co.jp/" target="_blank" rel="noreferrer noopener">WEB SITE</a></p>
 </div>
 
 
@@ -701,7 +701,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <p class="thd_group__item__industry">IT･Webシステム開発</p>
 
-<p class="thd_mod-arw__link"><a href="https://transit-careerup.com/" target="_blank" rel="noreferrer noopener">WEB SITE</a></p>
+<p class="thd_mod-arw__link"><a href="../preparation.html" target="_blank" rel="noreferrer noopener">WEB SITE</a></p>
 
 </div>
 
@@ -728,7 +728,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 
-<p class="thd_mod-arw__link"><a href="https://gyg.jp/" target="_blank" rel="noreferrer noopener">WEB SITE</a></p>
+<p class="thd_mod-arw__link"><a href="../preparation.html" target="_blank" rel="noreferrer noopener">WEB SITE</a></p>
 </div>
 
 
