--- a/company/summary.html
+++ b/company/summary.html
@@ -132,7 +132,7 @@
               </a>
             </li>
             <li class=" wp-block-navigation-item wp-block-navigation-link">
-              <a class="wp-block-navigation-item__content" href="https://www.transit-web.com/company/group-companies/"><span class="wp-block-navigation-item__label">グループ会社</span>
+              <a class="wp-block-navigation-item__content" href="../company/group.html"><span class="wp-block-navigation-item__label">グループ会社</span>
               </a>
             </li>
           </div>
