--- a/company/group.html
+++ b/company/group.html
@@ -585,7 +585,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 <div class="wp-block-column thd_group__item__logo is-layout-flow wp-block-column-is-layout-flow">
-<figure class="wp-block-image size-full"><img fetchpriority="high" decoding="async" width="320" height="320" src="https://placehold.jp/150x150.png" alt="" class="wp-image-1554" srcset="https://placehold.jp/150x150.png" sizes="(max-width: 320px) 100vw, 320px" /></figure>
+<figure class="wp-block-image size-full"><img fetchpriority="high" decoding="async" width="320" height="320" src="../img/company/walk.png" alt="" class="wp-image-1554" srcset="https://placehold.jp/150x150.png" sizes="(max-width: 320px) 100vw, 320px" /></figure>
 </div>
 </div>
 </div>
