--- a/company/partnar.html
+++ b/company/partnar.html
@@ -137,7 +137,7 @@
         <div class="l-block">
             <div class="l-contents">
                 <div class="l-section">
-                    <p class="p-group__lead">リライトホールディングスグループの<br class="u-sp">提携先企業をご紹介します。
+                    <p class="p-group__lead">リライトホールディングスの<br class="u-sp">提携先企業をご紹介します。
                         <!-- <br class="u-sp">仲間たちをご紹介します。 -->
                     </p>
         <!-- /breadcrumb -->
