--- a/company.html
+++ b/company.html
@@ -263,10 +263,9 @@
               〒520-1212<br>滋賀県高島市安曇川町西万木189-3 花寿文化教室１F
             </div>
           </li>
-          <div clas="group-companys">
-
+          <div class="group-companys">
+            <h2 class="group-company-wrap">グループ会社一覧</h2>
             <li class="p-profile__listItem p-profile__listItem-upper">
-              <p class="p-profile__listTtl">グループ会社一覧</p>
               <div class="p-profile__listTxt">
                 <span class="group-company-name">株式会社Walk</span>
                 <br>訪問看護ステーション／福祉タクシー／居宅介護支援事業所<br>
@@ -321,11 +320,11 @@
               </div>
               <p class="thd_mod-arw__link"><a href="preparation.html" target="_blank" rel="noreferrer noopener">WEB SITE</a></p>
             </li>
-            </ul>
           </div>
+        </ul>
 
           <ul class="p-profile__list p-profile__list-downer">
-          <div class="wp-block-snow-monkey-blocks-section alignfull smb-section smb-section--fit thd_company__members js-inview is-inview smb-section-2"><div class="smb-section__inner"><div class="c-container"><div class="smb-section__contents-wrapper"><div class="smb-section__header"><h2 class="smb-section__title">EXECUTIVE MEMBRS</h2><div class="smb-section__lede-wrapper"><div class="smb-section__lede">役員紹介</div></div></div><div class="smb-section__body is-layout-constrained wp-block-section-is-layout-constrained">
+          <div class="wp-block-snow-monkey-blocks-section alignfull smb-section smb-section--fit thd_company__members js-inview is-inview smb-section-2"><div class="smb-section__inner"><div class="c-container"><div class="smb-section__contents-wrapper smb-section__contents-wrapper-exective"><div class="smb-section__header"><h2 class="smb-section__title">EXECUTIVE MEMBRS</h2><div class="smb-section__lede-wrapper"><div class="smb-section__lede">役員紹介</div></div></div><div class="smb-section__body is-layout-constrained wp-block-section-is-layout-constrained">
             <div class="wp-block-group thd_company__menbers__content is-layout-constrained wp-block-group-is-layout-constrained">
             <div class="wp-block-columns is-not-stacked-on-mobile thd_company__menbers__item js-inview is-layout-flex wp-container-core-columns-is-layout-2 wp-block-columns-is-layout-flex is-inview">
 
