--- a/company/summary.html
+++ b/company/summary.html
@@ -262,66 +262,68 @@
               〒520-1212<br>滋賀県高島市安曇川町西万木189-3 花寿文化教室１F
             </div>
           </li>
-          <li class="p-profile__listItem p-profile__listItem-upper">
-            <p class="p-profile__listTtl">グループ会社一覧</p>
-            <div class="p-profile__listTxt">
-              <span class="group-company-name">株式会社Walk</span>
-              <br>訪問看護ステーション／福祉タクシー／居宅介護支援事業所<br>
-              滋賀県高島市安曇川町西万木189-3-1F
-            </div>
-            <p class="thd_mod-arw__link"><a href="https://walk-ynwa.com/" target="_blank" rel="noreferrer noopener">WEB SITE</a></p>
-          </li>
-          <li class="p-profile__listItem p-profile__listItem-upper">
-            <div class="p-profile__listTxt">
-              <span class="group-company-name">リライト公認会計士･税理士事務所</span>
-              <br>税務顧問／補助金支援／連結決算支援／IPO支援／ストックオプション発行／資本政策<br>
-              千葉県松戸市新松戸4-252-2
-            </div>
-            <p class="thd_mod-arw__link"><a href="../cpa.html" target="_blank" rel="noreferrer noopener">WEB SITE</a></p>
-          </li>
-          <li class="p-profile__listItem p-profile__listItem-upper">
-            <div class="p-profile__listTxt">
-              <span class="group-company-name">リライト社労士事務所</span>
-              <br>企業労務顧問／助成金支援<br>
-              徳島県徳島市北矢三町3-8-6-1
-            </div>
-            <p class="thd_mod-arw__link"><a href="../preparation.html" target="_blank" rel="noreferrer noopener">WEB SITE</a></p>
-          </li>
-          <li class="p-profile__listItem p-profile__listItem-upper">
-            <div class="p-profile__listTxt">
-              <span class="group-company-name">アクティブ司法書士事務所</span>
-              <br>相続／不動産名義／法人登記<br>
-              東京都港区虎ノ門1-17-1-15F
-            </div>
-            <p class="thd_mod-arw__link"><a href="https://activeoffice.tokyo/" target="_blank" rel="noreferrer noopener">WEB SITE</a></p>
-          </li>
-          <li class="p-profile__listItem p-profile__listItem-upper">
-            <div class="p-profile__listTxt">
-              <span class="group-company-name">株式会社ファイナンシャルサービスホールディングス</span>
-              <br>経営アドバイザリー／財務コンサルティング／M&A仲介<br>
-              滋賀県高島市安曇川町西万木189-3-1F
-            </div>
-            <p class="thd_mod-arw__link"><a href="https://financialservice.co.jp/" target="_blank" rel="noreferrer noopener">WEB SITE</a></p>
-          </li>
-          <li class="p-profile__listItem p-profile__listItem-upper">
-            <div class="p-profile__listTxt">
-              <span class="group-company-name">株式会社RELAPIS</span>
-              <br>IT･Webシステム開発<br>
-              東京都渋谷区神宮6-19-15-10B
-            </div>
-            <p class="thd_mod-arw__link"><a href="../preparation.html" target="_blank" rel="noreferrer noopener">WEB SITE</a></p>
-          </li>
-          <li class="p-profile__listItem p-profile__listItem-upper">
-            <div class="p-profile__listTxt">
-              <span class="group-company-name">株式会社エルピスエステート</span>
-              <br>不動産売買仲介／不動産賃貸仲介／不動産管理
-            </div>
-            <p class="thd_mod-arw__link"><a href="../preparation.html" target="_blank" rel="noreferrer noopener">WEB SITE</a></p>
-          </li>
+          <div class="group-companys">
+            <h2 class="group-company-wrap">グループ会社一覧</h2>
+            <li class="p-profile__listItem p-profile__listItem-upper">
+              <div class="p-profile__listTxt">
+                <span class="group-company-name">株式会社Walk</span>
+                <br>訪問看護ステーション／福祉タクシー／居宅介護支援事業所<br>
+                滋賀県高島市安曇川町西万木189-3-1F
+              </div>
+              <p class="thd_mod-arw__link"><a href="https://walk-ynwa.com/" target="_blank" rel="noreferrer noopener">WEB SITE</a></p>
+            </li>
+            <li class="p-profile__listItem p-profile__listItem-upper">
+              <div class="p-profile__listTxt">
+                <span class="group-company-name">リライト公認会計士･税理士事務所</span>
+                <br>税務顧問／補助金支援／連結決算支援／IPO支援／ストックオプション発行／資本政策<br>
+                千葉県松戸市新松戸4-252-2
+              </div>
+              <p class="thd_mod-arw__link"><a href="cpa.html" target="_blank" rel="noreferrer noopener">WEB SITE</a></p>
+            </li>
+            <li class="p-profile__listItem p-profile__listItem-upper">
+              <div class="p-profile__listTxt">
+                <span class="group-company-name">リライト社労士事務所</span>
+                <br>企業労務顧問／助成金支援<br>
+                徳島県徳島市北矢三町3-8-6-1
+              </div>
+              <p class="thd_mod-arw__link"><a href="preparation.html" target="_blank" rel="noreferrer noopener">WEB SITE</a></p>
+            </li>
+            <li class="p-profile__listItem p-profile__listItem-upper">
+              <div class="p-profile__listTxt">
+                <span class="group-company-name">アクティブ司法書士事務所</span>
+                <br>相続／不動産名義／法人登記<br>
+                東京都港区虎ノ門1-17-1-15F
+              </div>
+              <p class="thd_mod-arw__link"><a href="https://activeoffice.tokyo/" target="_blank" rel="noreferrer noopener">WEB SITE</a></p>
+            </li>
+            <li class="p-profile__listItem p-profile__listItem-upper">
+              <div class="p-profile__listTxt">
+                <span class="group-company-name">株式会社ファイナンシャルサービスホールディングス</span>
+                <br>経営アドバイザリー／財務コンサルティング／M&A仲介<br>
+                滋賀県高島市安曇川町西万木189-3-1F
+              </div>
+              <p class="thd_mod-arw__link"><a href="https://financialservice.co.jp/" target="_blank" rel="noreferrer noopener">WEB SITE</a></p>
+            </li>
+            <li class="p-profile__listItem p-profile__listItem-upper">
+              <div class="p-profile__listTxt">
+                <span class="group-company-name">株式会社RELAPIS</span>
+                <br>IT･Webシステム開発<br>
+                東京都渋谷区神宮6-19-15-10B
+              </div>
+              <p class="thd_mod-arw__link"><a href="preparation.html" target="_blank" rel="noreferrer noopener">WEB SITE</a></p>
+            </li>
+            <li class="p-profile__listItem p-profile__listItem-upper">
+              <div class="p-profile__listTxt">
+                <span class="group-company-name">株式会社エルピスエステート</span>
+                <br>不動産売買仲介／不動産賃貸仲介／不動産管理
+              </div>
+              <p class="thd_mod-arw__link"><a href="preparation.html" target="_blank" rel="noreferrer noopener">WEB SITE</a></p>
+            </li>
+          </div>
           </ul>
 
           <ul class="p-profile__list">
-          <div class="wp-block-snow-monkey-blocks-section alignfull smb-section smb-section--fit thd_company__members js-inview is-inview"><div class="smb-section__inner"><div class="c-container"><div class="smb-section__contents-wrapper"><div class="smb-section__header"><h2 class="smb-section__title">EXECUTIVE MEMBRS</h2><div class="smb-section__lede-wrapper"><div class="smb-section__lede">役員紹介</div></div></div><div class="smb-section__body is-layout-constrained wp-block-section-is-layout-constrained">
+          <div class="wp-block-snow-monkey-blocks-section alignfull smb-section smb-section--fit thd_company__members js-inview is-inview"><div class="smb-section__inner"><div class="c-container"><div class="smb-section__contents-wrapper smb-section__contents-wrapper-exective"><div class="smb-section__header"><h2 class="smb-section__title">EXECUTIVE MEMBRS</h2><div class="smb-section__lede-wrapper"><div class="smb-section__lede">役員紹介</div></div></div><div class="smb-section__body is-layout-constrained wp-block-section-is-layout-constrained">
             <div class="wp-block-group thd_company__menbers__content is-layout-constrained wp-block-group-is-layout-constrained">
             <div class="wp-block-columns is-not-stacked-on-mobile thd_company__menbers__item js-inview is-layout-flex wp-container-core-columns-is-layout-2 wp-block-columns-is-layout-flex is-inview">
 
