--- a/contact.html
+++ b/contact.html
@@ -105,6 +105,7 @@
 </header>
 
     <main>
+      <div class="wp-block-snow-monkey-blocks-section smb-section smb-section--fit thd_mod-lower_header"><div class="smb-section__inner"><div class="c-container"><div class="smb-section__contents-wrapper"><div class="smb-section__header"><h1 class="smb-section__title">CONTACT</h1><div class="smb-section__lede-wrapper"><div class="smb-section__lede">お問い合わせ</div></div></div><div class="smb-section__body is-layout-constrained wp-block-section-is-layout-constrained"></div></div></div></div></div>
         <!-- <main class="l-main p-inquiry" id="inquiry"> -->
 
             <!-- kv -->
