--- a/adoption.html
+++ b/adoption.html
@@ -521,7 +521,15 @@
       </div>
     </div>
     <!-- /links -->
-
+    <div class="wp-block-snow-monkey-blocks-btn-box smb-btn-box thd_mod-bottom_next_link">
+      <div class="c-container">
+          <div class="smb-btn-box__btn-wrapper">
+              <a class="smb-btn smb-btn--full" href="adoption.html" style="--smb-btn--background-color:var(--_color-white);--smb-btn--color:var(--accent-color)">
+                  <span class="smb-btn__label">NEXT　/　RECRUIT</span>
+              </a>
+          </div>
+      </div>
+  </div>
   </main>
   <footer>
     <div class="l-footer__upper">
