--- a/contact.html
+++ b/contact.html
@@ -55,10 +55,10 @@
                         <button class="toggle-btn">＋</button>
                         </div>
                                 <div class="accordion-content">
-                                    <a href="company/message.html" class="index-more">-グループ代表挨拶</a>
-                                    <a href="company/mission.html" class="index-more">-グループビジョン・経営理念</a>
                                     <a href="company/summary.html" class="index-more">-会社概要</a>
-                                    <a href="company/group.html" class="index-more">-グループ会社一覧</a>
+                                    <a href="company/message.html" class="index-more">-トップメッセージ</a>
+                                    <a href="company/mission.html" class="index-more">-グループビジョン・経営理念</a>
+                                    <a href="company/group.html" class="index-more">-グループ企業一覧</a>
                                     <a href="company/partnar.html" class="index-more">-提携先企業一覧</a>
                                   </div>
                     </li>
@@ -92,7 +92,7 @@
                         <button class="toggle-btn">＋</button>
                     </div>
                             <div class="accordion-content">
-                                <a href="contact/interviw.html" class="index-more">-会社、取材に関するお問い合わせ</a>
+                                <a href="contact/interviw.html" class="index-more">-会社・取材に関するお問い合わせ</a>
                                 <a href="contact/adoption.html" class="index-more">-採用に関するお問い合わせ</a>
                                 <a href="contact/cooperation.html" class="index-more">-業務提携に関するお問い合わせ</a>
                                 <a href="contact/sales.html" class="index-more">-営業の方はこちら</a>
@@ -368,7 +368,7 @@
                 <button class="toggle-btn-contact">＋</button>
                 </div>
                         <div class="accordion-content">
-                          <button class="tab-btn active" data-form="form1">会社、取材に関するお問い合わせ</button>
+                          <button class="tab-btn active" data-form="form1">会社・取材に関するお問い合わせ</button>
                           <button class="tab-btn" data-form="form2">採用に関するお問い合わせ</button>
                           <button class="tab-btn" data-form="form3">業務提携に関するお問い合わせ</button>
                           <button class="tab-btn" data-form="form4">営業に関するお問い合わせ</button>
@@ -378,7 +378,7 @@
               <div class="form-content">
                 <div id="form1" class="form-box active"> <form class="contact-form">
         
-                  <h2 class="contact-saiyou">会社、取材に関するお問い合わせ</h2>
+                  <h2 class="contact-saiyou">会社・取材に関するお問い合わせ</h2>
               
                   <div class="form-block">
                     <label>お名前 <span class="required">必須</span></label>
@@ -723,12 +723,9 @@
           <ul class="footer-index top">
               <li>
                   <div class="accordion accordion-top">
-                      <a class="circle">
-                          ●　
-                      </a>
                       <a class="index-text" href="index.html">
-                          <!-- <span class="circle"></span> -->
-                          ホーム <span class="index-text-english"> HOME</span>
+                          <span class="circle">●     </span>
+                             ホーム <span class="index-text-english"> HOME</span>
                       </a>
                       </div>
               </li>
@@ -741,10 +738,10 @@
               <button class="toggle-btn">＋</button>
               </div>
                       <div class="accordion-content">
-                          <a href="company/message.html" class="index-more">-グループ代表挨拶</a>
-                          <a href="company/mission.html" class="index-more">-グループビジョン・経営理念</a>
                           <a href="company/summary.html" class="index-more">-会社概要</a>
-                          <a href="company/group.html" class="index-more">-グループ会社一覧</a>
+                          <a href="company/message.html" class="index-more">-トップメッセージ</a>
+                          <a href="company/mission.html" class="index-more">-グループビジョン・経営理念</a>
+                          <a href="company/group.html" class="index-more">-グループ企業一覧</a>
                           <a href="company/partnar.html" class="index-more">-提携先企業一覧</a>
                         </div>
           </li>
@@ -778,7 +775,7 @@
               <button class="toggle-btn">＋</button>
           </div>
                   <div class="accordion-content">
-                      <a href="contact/interviw.html" class="index-more">-会社、取材に関するお問い合わせ</a>
+                      <a href="contact/interviw.html" class="index-more">-会社・取材に関するお問い合わせ</a>
                       <a href="contact/adoption.html" class="index-more">-採用に関するお問い合わせ</a>
                       <a href="contact/cooperation.html" class="index-more">-業務提携に関するお問い合わせ</a>
                       <a href="contact/sales.html" class="index-more">-営業の方はこちら</a>
