--- a/contact/interviw.html
+++ b/contact/interviw.html
@@ -50,10 +50,10 @@
                         <button class="toggle-btn">＋</button>
                         </div>
                                 <div class="accordion-content">
-                                    <a href="../company/message.html" class="index-more">-グループCEOメッセージ</a>
+                                  <a href="../company/summary.html" class="index-more">-会社概要</a>
+                                    <a href="../company/message.html" class="index-more">-トップメッセージ</a>
                                     <a href="../company/mission.html" class="index-more">-グループビジョン・経営理念</a>
-                                    <a href="../company/summary.html" class="index-more">-会社概要</a>
-                                    <a href="../company/group.html" class="index-more">-グループ会社一覧</a>
+                                    <a href="../company/group.html" class="index-more">-グループ企業一覧</a>
                                     <a href="../company/partnar.html" class="index-more">-提携先企業一覧</a>
                                   </div>
                     </li>
@@ -187,12 +187,9 @@
           <ul class="footer-index top">
               <li>
                   <div class="accordion accordion-top">
-                      <a class="circle">
-                          ●　
-                      </a>
                       <a class="index-text" href="../index.html">
-          
-                          ホーム <span class="index-text-english"> HOME</span>
+                          <span class="circle">●     </span>
+                             ホーム <span class="index-text-english"> HOME</span>
                       </a>
                       </div>
               </li>
@@ -205,10 +202,10 @@
               <button class="toggle-btn">＋</button>
               </div>
                       <div class="accordion-content">
-                          <a href="../company/message.html" class="index-more">-グループ代表挨拶</a>
-                          <a href="../company/mission.html" class="index-more">-グループビジョン・経営理念</a>
                           <a href="../company/summary.html" class="index-more">-会社概要</a>
-                          <a href="../company/group.html" class="index-more">-グループ会社一覧</a>
+                          <a href="../company/message.html" class="index-more">-トップメッセージ</a>
+                          <a href="../company/mission.html" class="index-more">-グループビジョン・経営理念</a>
+                          <a href="../company/group.html" class="index-more">-グループ企業一覧</a>
                           <a href="../company/partnar.html" class="index-more">-提携先企業一覧</a>
                         </div>
           </li>
@@ -242,7 +239,7 @@
               <button class="toggle-btn">＋</button>
           </div>
                   <div class="accordion-content">
-                      <a href="../contact/interviw.html" class="index-more">-会社、取材に関するお問い合わせ</a>
+                      <a href="../contact/interviw.html" class="index-more">-会社・取材に関するお問い合わせ</a>
                       <a href="../contact/adoption.html" class="index-more">-採用に関するお問い合わせ</a>
                       <a href="../contact/cooperation.html" class="index-more">-業務提携に関するお問い合わせ</a>
                       <a href="../contact/sales.html" class="index-more">-営業の方はこちら</a>
