--- a/index.html
+++ b/index.html
@@ -3157,10 +3157,10 @@
                                     <button class="toggle-btn">＋</button>
                                     </div>
                                             <div class="accordion-content">
-                                                <a href="company/message.html" class="index-more">-グループ代表挨拶</a>
-                                                <a href="company/mission.html" class="index-more">-グループビジョン・経営理念</a>
                                                 <a href="company/summary.html" class="index-more">-会社概要</a>
-                                                <a href="company/group.html" class="index-more">-グループ会社一覧</a>
+                                                <a href="company/message.html" class="index-more">-トップメッセージ</a>
+                                                <a href="company/mission.html" class="index-more">-グループビジョン・経営理念</a>
+                                                <a href="company/group.html" class="index-more">-グループ企業一覧</a>
                                                 <a href="company/partnar.html" class="index-more">-提携先企業一覧</a>
                                               </div>
                                 </li>
@@ -3194,7 +3194,7 @@
                                     <button class="toggle-btn">＋</button>
                                 </div>
                                         <div class="accordion-content">
-                                            <a href="contact/interviw.html" class="index-more">-会社、取材に関するお問い合わせ</a>
+                                            <a href="contact/interviw.html" class="index-more">-会社・取材に関するお問い合わせ</a>
                                             <a href="contact/adoption.html" class="index-more">-採用に関するお問い合わせ</a>
                                             <a href="contact/cooperation.html" class="index-more">-業務提携に関するお問い合わせ</a>
                                             <a href="contact/sales.html" class="index-more">-営業の方はこちら</a>
@@ -3543,7 +3543,7 @@
                                                                 <div class="smb-section__header">
                                                                     <h2 class="smb-section__title">GROUP COMPANIES</h2>
                                                                     <div class="smb-section__lede-wrapper">
-                                                                        <div class="smb-section__lede">グループ会社</div>
+                                                                        <div class="smb-section__lede">グループ企業</div>
                                                                     </div>
                                                                 </div>
                                                                 <div class="smb-section__body is-layout-constrained wp-block-section-is-layout-constrained">
@@ -3568,7 +3568,7 @@
                                                                     <div class="wp-block-snow-monkey-blocks-buttons smb-buttons is-content-justification-center is-layout-flex wp-container-snow-monkey-blocks-buttons-is-layout-4 wp-block-buttons-is-layout-flex">
                                                                         <div class="wp-block-snow-monkey-blocks-btn smb-btn-wrapper is-style-text thd_mod-arw__link --large">
                                                                             <a class="smb-btn" href="company/group.html">
-                                                                                <span class="smb-btn__label">グループ会社を詳しく見る</span>
+                                                                                <span class="smb-btn__label">グループ企業を詳しく見る</span>
                                                                             </a>
                                                                         </div>
                                                                     </div>
@@ -3650,12 +3650,9 @@
                     <ul class="footer-index top">
                         <li>
                             <div class="accordion accordion-top">
-                                <a class="circle">
-                                    ●　
-                                </a>
                                 <a class="index-text" href="index.html">
-                                    <!-- <span class="circle"></span> -->
-                                    ホーム <span class="index-text-english"> HOME</span>
+                                    <span class="circle">●     </span>
+                                       ホーム <span class="index-text-english"> HOME</span>
                                 </a>
                                 </div>
                         </li>
@@ -3668,10 +3665,10 @@
                         <button class="toggle-btn">＋</button>
                         </div>
                                 <div class="accordion-content">
-                                    <a href="company/message.html" class="index-more">-グループ代表挨拶</a>
-                                    <a href="company/mission.html" class="index-more">-グループビジョン・経営理念</a>
                                     <a href="company/summary.html" class="index-more">-会社概要</a>
-                                    <a href="company/group.html" class="index-more">-グループ会社一覧</a>
+                                    <a href="company/message.html" class="index-more">-トップメッセージ</a>
+                                    <a href="company/mission.html" class="index-more">-グループビジョン・経営理念</a>
+                                    <a href="company/group.html" class="index-more">-グループ企業一覧</a>
                                     <a href="company/partnar.html" class="index-more">-提携先企業一覧</a>
                                   </div>
                     </li>
@@ -3705,7 +3702,7 @@
                         <button class="toggle-btn">＋</button>
                     </div>
                             <div class="accordion-content">
-                                <a href="contact/interviw.html" class="index-more">-会社、取材に関するお問い合わせ</a>
+                                <a href="contact/interviw.html" class="index-more">-会社・取材に関するお問い合わせ</a>
                                 <a href="contact/adoption.html" class="index-more">-採用に関するお問い合わせ</a>
                                 <a href="contact/cooperation.html" class="index-more">-業務提携に関するお問い合わせ</a>
                                 <a href="contact/sales.html" class="index-more">-営業の方はこちら</a>
