--- a/company/summary.html
+++ b/company/summary.html
@@ -56,7 +56,7 @@
                         <button class="toggle-btn">＋</button>
                         </div>
                                 <div class="accordion-content">
-                                  <a href="../company/summary.html" class="index-more">-会社概要</a>
+                                  <a href="../company.html" class="index-more">-会社概要</a>
                                     <a href="../company/message.html" class="index-more">-トップメッセージ</a>
                                     <a href="../company/mission.html" class="index-more">-グループビジョン・経営理念</a>
                                     <a href="../company/group.html" class="index-more">-グループ企業一覧</a>
@@ -1093,10 +1093,10 @@
                   <div class="accordion">
                   <a class="index-text" href="../company.html">会社情報 <span class="index-text-english">COMPANY</span>
                   </a>
-                  <button class="toggle-btn">＋</button>
+                  <button class="toggle-btn-footer">＋</button>
                   </div>
                           <div class="accordion-content">
-                              <a href="../company/summary.html" class="index-more">-会社概要</a>
+                              <a href="../company.html" class="index-more">-会社概要</a>
                               <a href="../company/message.html" class="index-more">-トップメッセージ</a>
                               <a href="../company/mission.html" class="index-more">-グループビジョン・経営理念</a>
                               <a href="../company/group.html" class="index-more">-グループ企業一覧</a>
@@ -1117,7 +1117,7 @@
                   <div class="accordion">
                   <a class="index-text"  href="../adoption.html">採用情報<span class="index-text-english"> RECRUIT</span>
                   </a>
-                  <button class="toggle-btn">＋</button>
+                  <button class="toggle-btn-footer">＋</button>
               </div>
                       <div class="accordion-content">
                           <a href="../adoption/executive.html" class="index-more">-経営幹部採用</a>
@@ -1130,7 +1130,7 @@
               <li>
                   <div class="accordion">
                   <a class="index-text"  href="../contact.html">お問い合わせ <span class="index-text-english">CONTACT</span></a>
-                  <button class="toggle-btn">＋</button>
+                  <button class="toggle-btn-footer">＋</button>
               </div>
                       <div class="accordion-content">
                           <a href="../contact/interviw.html" class="index-more">-会社・取材に関するお問い合わせ</a>
