--- a/contact/cooperation.html
+++ b/contact/cooperation.html
@@ -50,7 +50,7 @@
                         <button class="toggle-btn">＋</button>
                         </div>
                                 <div class="accordion-content">
-                                  <a href="../company/summary.html" class="index-more">-会社概要</a>
+                                  <a href="../company.html" class="index-more">-会社概要</a>
                                     <a href="../company/message.html" class="index-more">-トップメッセージ</a>
                                     <a href="../company/mission.html" class="index-more">-グループビジョン・経営理念</a>
                                     <a href="../company/group.html" class="index-more">-グループ企業一覧</a>
@@ -212,7 +212,7 @@
               <button class="toggle-btn">＋</button>
               </div>
                       <div class="accordion-content">
-                          <a href="../company/summary.html" class="index-more">-会社概要</a>
+                          <a href="../company.html" class="index-more">-会社概要</a>
                           <a href="../company/message.html" class="index-more">-トップメッセージ</a>
                           <a href="../company/mission.html" class="index-more">-グループビジョン・経営理念</a>
                           <a href="../company/group.html" class="index-more">-グループ企業一覧</a>
