--- a/index/news.html
+++ b/index/news.html
@@ -56,7 +56,7 @@
                                     <div class="accordion-content">
                                         <a href="../company/message.html" class="index-more">-グループCEOメッセージ</a>
                                         <a href="../company/mission.html" class="index-more">-グループビジョン・経営理念</a>
-                                        <a href="../company/summary.html" class="index-more">-会社概要</a>
+                                        <a href="../company.html" class="index-more">-会社概要</a>
                                         <a href="../company/group.html" class="index-more">-グループ企業一覧</a>
                                         <a href="../company/partnar.html" class="index-more">-提携先企業一覧</a>
                                       </div>
@@ -522,7 +522,7 @@
                   <button class="toggle-btn">＋</button>
                   </div>
                           <div class="accordion-content">
-                              <a href="../company/summary.html" class="index-more">-会社概要</a>
+                              <a href="../company.html" class="index-more">-会社概要</a>
                               <a href="../company/message.html" class="index-more">-トップメッセージ</a>
                               <a href="../company/mission.html" class="index-more">-グループビジョン・経営理念</a>
                               <a href="../company/group.html" class="index-more">-グループ企業一覧</a>
