--- a/index/vision.html
+++ b/index/vision.html
@@ -56,7 +56,7 @@
                                     <div class="accordion-content">
                                         <a href="../company/message.html" class="index-more">-グループCEOメッセージ</a>
                                         <a href="../company/mission.html" class="index-more">-グループビジョン・経営理念</a>
-                                        <a href="../company/summary.html" class="index-more">-会社概要</a>
+                                        <a href="../company.html" class="index-more">-会社概要</a>
                                         <a href="../company/group.html" class="index-more">-グループ会社一覧</a>
                                         <a href="../company/partnar.html" class="index-more">-提携先企業一覧</a>
                                       </div>
@@ -146,12 +146,12 @@
                 <div class="accordion">
                 <a class="index-text" href="../company.html">会社情報 <span class="index-text-english">COMPANY</span>
                 </a>
-                <button class="toggle-btn">＋</button>
+                <button class="toggle-btn-footer">＋</button>
                 </div>
                         <div class="accordion-content">
                             <a href="../company/message.html" class="index-more">-グループ代表挨拶</a>
                             <a href="../company/mission.html" class="index-more">-グループビジョン・経営理念</a>
-                            <a href="../company/summary.html" class="index-more">-会社概要</a>
+                            <a href="../company.html" class="index-more">-会社概要</a>
                             <a href="../company/group.html" class="index-more">-グループ会社一覧</a>
                             <a href="../company/partnar.html" class="index-more">-提携先企業一覧</a>
                           </div>
@@ -170,7 +170,7 @@
                 <div class="accordion">
                 <a class="index-text"  href="../adoption.html">採用情報<span class="index-text-english"> RECRUIT</span>
                 </a>
-                <button class="toggle-btn">＋</button>
+                <button class="toggle-btn-footer">＋</button>
             </div>
                     <div class="accordion-content">
                         <a href="../adoption/executive.html" class="index-more">-経営幹部採用</a>
@@ -183,7 +183,7 @@
             <li>
                 <div class="accordion">
                 <a class="index-text"  href="../contact.html">お問い合わせ <span class="index-text-english">CONTACT</span></a>
-                <button class="toggle-btn">＋</button>
+                <button class="toggle-btn-footer">＋</button>
             </div>
                     <div class="accordion-content">
                         <a href="../contact/interviw.html" class="index-more">-会社、取材に関するお問い合わせ</a>
