--- a/index.html
+++ b/index.html
@@ -3160,7 +3160,7 @@
                                                 <a href="company.html" class="index-more">-会社概要</a>
                                                 <a href="company/message.html" class="index-more">-トップメッセージ</a>
                                                 <a href="company/mission.html" class="index-more">-グループビジョン・経営理念</a>
-                                                <a href="company/group.html" class="index-more">-グループ企業一覧</a>
+                                                <a href="company.html#group-companys" class="index-more">-グループ企業一覧</a>
                                                 <a href="company/partnar.html" class="index-more">-提携先企業一覧</a>
                                               </div>
                                 </li>
@@ -3567,7 +3567,7 @@
                                                                     </div>
                                                                     <div class="wp-block-snow-monkey-blocks-buttons smb-buttons is-content-justification-center is-layout-flex wp-container-snow-monkey-blocks-buttons-is-layout-4 wp-block-buttons-is-layout-flex">
                                                                         <div class="wp-block-snow-monkey-blocks-btn smb-btn-wrapper is-style-text thd_mod-arw__link --large">
-                                                                            <a class="smb-btn" href="company/group.html">
+                                                                            <a class="smb-btn" href="company.html#group-companys">
                                                                                 <span class="smb-btn__label">グループ企業を詳しく見る</span>
                                                                             </a>
                                                                         </div>
@@ -3668,7 +3668,7 @@
                                     <a href="company.html" class="index-more">-会社概要</a>
                                     <a href="company/message.html" class="index-more">-トップメッセージ</a>
                                     <a href="company/mission.html" class="index-more">-グループビジョン・経営理念</a>
-                                    <a href="company/group.html" class="index-more">-グループ企業一覧</a>
+                                    <a href="company.html#group-companys" class="index-more">-グループ企業一覧</a>
                                     <a href="company/partnar.html" class="index-more">-提携先企業一覧</a>
                                   </div>
                     </li>
