--- a/adoption/employee.html
+++ b/adoption/employee.html
@@ -443,7 +443,7 @@
                 <div class="accordion">
                 <a class="index-text" href="../company.html">会社情報 <span class="index-text-english">COMPANY</span>
                 </a>
-                <button class="toggle-btn">＋</button>
+                <button class="toggle-btn-footer">＋</button>
                 </div>
                         <div class="accordion-content">
                             <a href="../company.html" class="index-more">-会社概要</a>
@@ -467,7 +467,7 @@
                 <div class="accordion">
                 <a class="index-text"  href="../adoption.html">採用情報<span class="index-text-english"> RECRUIT</span>
                 </a>
-                <button class="toggle-btn">＋</button>
+                <button class="toggle-btn-footer">＋</button>
             </div>
                     <div class="accordion-content">
                         <a href="../adoption/executive.html" class="index-more">-経営幹部採用</a>
@@ -480,7 +480,7 @@
             <li>
                 <div class="accordion">
                 <a class="index-text"  href="../contact.html">お問い合わせ <span class="index-text-english">CONTACT</span></a>
-                <button class="toggle-btn">＋</button>
+                <button class="toggle-btn-footer">＋</button>
             </div>
                     <div class="accordion-content">
                         <a href="../contact/interviw.html" class="index-more">-会社・取材に関するお問い合わせ</a>
