--- a/company/message.html
+++ b/company/message.html
@@ -446,7 +446,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                     <a href="../company.html" class="index-more">-会社概要</a>
                                       <a href="../company/message.html" class="index-more">-トップメッセージ</a>
                                       <a href="../company/mission.html" class="index-more">-グループビジョン・経営理念</a>
-                                      <a href="../company/group.html" class="index-more">-グループ企業一覧</a>
+                                      <a href="../company.html#group-companys" class="index-more">-グループ企業一覧</a>
                                       <a href="../company/partnar.html" class="index-more">-提携先企業一覧</a>
                                     </div>
                       </li>
@@ -478,6 +478,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 </div>
                       </li>
                   </ul>
+                  <ul class="index-main">
+                    <li>
+                        <div class="accordion">
+                        <a class="index-text"  href="../news.html">ニュース <span class="index-text-english">NEWS</span>
+                        </a>
+                          </div>
+                    </li>
+                </ul>
                  <ul class="index-main">
                       <li>
                           <div class="accordion">
@@ -672,7 +680,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                       <a href="../company.html" class="index-more">-会社概要</a>
                       <a href="../company/message.html" class="index-more">-トップメッセージ</a>
                       <a href="../company/mission.html" class="index-more">-グループビジョン・経営理念</a>
-                      <a href="../company/group.html" class="index-more">-グループ企業一覧</a>
+                      <a href="../company.html#group-companys" class="index-more">-グループ企業一覧</a>
                       <a href="../company/partnar.html" class="index-more">-提携先企業一覧</a>
                     </div>
       </li>
@@ -699,6 +707,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
       </li>
   </ul>
+  <ul class="footer-index">
+    <li>
+        <div class="accordion">
+        <a class="index-text"  href="../news.html">ニュース <span class="index-text-english">NEWS</span>
+        </a>
+          </div>
+    </li>
+</ul>
   <ul class="footer-index">
       <li>
           <div class="accordion">
