--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
                                     <a href="company.html" class="index-more">-会社概要</a>
                                     <a href="company/message.html" class="index-more">-トップメッセージ</a>
                                     <a href="company/mission.html" class="index-more">-グループビジョン・経営理念</a>
-                                    <a href="company/group.html" class="index-more">-グループ企業一覧</a>
+                                    <a href="company.html#group-companys" class="index-more">-グループ企業一覧</a>
                                     <a href="company/partnar.html" class="index-more">-提携先企業一覧</a>
                                   </div>
                     </li>
@@ -85,6 +85,14 @@
                               </div>
                     </li>
                 </ul>
+                <ul class="index-main">
+                  <li>
+                      <div class="accordion">
+                      <a class="index-text"  href="news.html">ニュース <span class="index-text-english">NEWS</span>
+                      </a>
+                        </div>
+                  </li>
+              </ul>
                 <ul class="index-main">
                     <li>
                         <div class="accordion">
@@ -741,7 +749,7 @@
                           <a href="company.html" class="index-more">-会社概要</a>
                           <a href="company/message.html" class="index-more">-トップメッセージ</a>
                           <a href="company/mission.html" class="index-more">-グループビジョン・経営理念</a>
-                          <a href="company/group.html" class="index-more">-グループ企業一覧</a>
+                          <a href="company.html#group-companys" class="index-more">-グループ企業一覧</a>
                           <a href="company/partnar.html" class="index-more">-提携先企業一覧</a>
                         </div>
           </li>
@@ -768,6 +776,15 @@
                     </div>
           </li>
       </ul>
+      
+      <ul class="footer-index">
+        <li>
+            <div class="accordion">
+            <a class="index-text"  href="news.html">ニュース <span class="index-text-english">NEWS</span>
+            </a>
+              </div>
+        </li>
+    </ul>
       <ul class="footer-index">
           <li>
               <div class="accordion">
