--- a/index.html
+++ b/index.html
@@ -3190,6 +3190,14 @@
                             <ul class="index-main">
                                 <li>
                                     <div class="accordion">
+                                    <a class="index-text"  href="news.html">ニュース <span class="index-text-english">NEWS</span>
+                                    </a>
+                                      </div>
+                                </li>
+                            </ul>
+                            <ul class="index-main">
+                                <li>
+                                    <div class="accordion">
                                     <a class="index-text"  href="contact.html">お問い合わせ <span class="index-text-english">CONTACT</span></a>
                                     <button class="toggle-btn">＋</button>
                                 </div>
@@ -3436,8 +3444,8 @@
                                                         </div>
                                                     </div>
                                                 </div>
-                                                <div class="wp-block-snow-monkey-blocks-section smb-section smb-section--fit thd_top__vision js-inview">
-                                                    <div class="smb-section__inner">
+                                                <div class="wp-block-snow-monkey-blocks-section smb-section smb-section--fit smb-section--fit-vision thd_top__vision js-inview">
+                                                    <div class="smb-section__inner-home">
                                                         <div class="c-container">
                                                             <div class="smb-section__contents-wrapper">
                                                                 <div class="smb-section__body is-layout-constrained wp-block-section-is-layout-constrained">
@@ -3481,7 +3489,7 @@
                                                     </div>
                                                 </div>
                                                 <div class="wp-block-snow-monkey-blocks-section smb-section smb-section--fit thd_top__business js-inview">
-                                                    <div class="smb-section__inner">
+                                                    <div class="smb-section__inner-home">
                                                         <div class="c-container">
                                                             <div class="smb-section__contents-wrapper">
                                                                 <div class="smb-section__header">
@@ -3590,7 +3598,7 @@
                                                     <div class="wp-block-snow-monkey-blocks-section alignfull smb-section smb-section--fit">
                                                         <div class="smb-section__inner">
                                                             <div class="c-container">
-                                                                <div class="smb-section__contents-wrapper">
+                                                                <div class="smb-section__contents-wrapper-recruit">
                                                                     <div class="smb-section__header">
                                                                         <h2 class="smb-section__title">RECRUIT</h2>
                                                                         <div class="smb-section__lede-wrapper">
@@ -3693,6 +3701,14 @@
                                 <a href="adoption/employee.html" class="index-more">-社員採用</a>
                                 <a href="adoption/part.html" class="index-more">-アルバイト採用</a>
                               </div>
+                    </li>
+                </ul>
+                <ul class="footer-index">
+                    <li>
+                        <div class="accordion">
+                        <a class="index-text"  href="news.html">ニュース <span class="index-text-english">NEWS</span>
+                        </a>
+                          </div>
                     </li>
                 </ul>
                 <ul class="footer-index">
