--- a/inquiry.html
+++ b/inquiry.html
@@ -52,7 +52,7 @@
                                             <a href="company/summary.html" class="index-more">-会社概要</a>
                                             <a href="company/message.html" class="index-more">-トップメッセージ</a>
                                             <a href="company/mission.html" class="index-more">-グループビジョン・経営理念</a>
-                                            <a href="company/group.html" class="index-more">-グループ企業一覧</a>
+                                            <a href="company.html#group-companys" class="index-more">-グループ企業一覧</a>
                                             <a href="company/partnar.html" class="index-more">-提携先企業一覧</a>
                                           </div>
                             </li>
@@ -124,7 +124,7 @@
                                 <a href="company/summary.html" class="index-more">-会社概要</a>
                                 <a href="company/message.html" class="index-more">-トップメッセージ</a>
                                 <a href="company/mission.html" class="index-more">-グループビジョン・経営理念</a>
-                                <a href="company/group.html" class="index-more">-グループ企業一覧</a>
+                                <a href="company.html#group-companys" class="index-more">-グループ企業一覧</a>
                                 <a href="company/partnar.html" class="index-more">-提携先企業一覧</a>
                               </div>
                 </li>
