--- a/adoption.html
+++ b/adoption.html
@@ -58,7 +58,7 @@
                                         <a href="company.html" class="index-more">-会社概要</a>
                                         <a href="company/message.html" class="index-more">-トップメッセージ</a>
                                         <a href="company/mission.html" class="index-more">-グループビジョン・経営理念</a>
-                                        <a href="company/group.html" class="index-more">-グループ企業一覧</a>
+                                        <a href="company.html#group-companys" class="index-more">-グループ企業一覧</a>
                                         <a href="company/partnar.html" class="index-more">-提携先企業一覧</a>
                                       </div>
                         </li>
@@ -85,6 +85,14 @@
                                   </div>
                         </li>
                     </ul>
+                    <ul class="index-main">
+                      <li>
+                          <div class="accordion">
+                          <a class="index-text"  href="news.html">ニュース <span class="index-text-english">NEWS</span>
+                          </a>
+                            </div>
+                      </li>
+                  </ul>
                     <ul class="index-main">
                         <li>
                             <div class="accordion">
@@ -523,9 +531,9 @@
     <!-- /links -->
     <div class="wp-block-snow-monkey-blocks-btn-box smb-btn-box thd_mod-bottom_next_link">
       <div class="c-container">
-          <div class="smb-btn-box__btn-wrapper">
+          <div class="smb-btn-box__btn-wrapper-recruit">
               <a class="smb-btn smb-btn--full" href="adoption.html" style="--smb-btn--background-color:var(--_color-white);--smb-btn--color:var(--accent-color)">
-                  <span class="smb-btn__label">NEXT　/　RECRUIT</span>
+                  <span class="smb-btn__label">NEXT　/　CONTACT</span>
               </a>
           </div>
       </div>
@@ -567,7 +575,7 @@
                         <a href="company.html" class="index-more">-会社概要</a>
                         <a href="company/message.html" class="index-more">-トップメッセージ</a>
                         <a href="company/mission.html" class="index-more">-グループビジョン・経営理念</a>
-                        <a href="company/group.html" class="index-more">-グループ企業一覧</a>
+                        <a href="company.html#group-companys" class="index-more">-グループ企業一覧</a>
                         <a href="company/partnar.html" class="index-more">-提携先企業一覧</a>
                       </div>
         </li>
@@ -594,6 +602,14 @@
                   </div>
         </li>
     </ul>
+    <ul class="footer-index">
+      <li>
+          <div class="accordion">
+          <a class="index-text"  href="news.html">ニュース <span class="index-text-english">NEWS</span>
+          </a>
+            </div>
+      </li>
+  </ul>
     <ul class="footer-index">
         <li>
             <div class="accordion">
