--- a/business.html
+++ b/business.html
@@ -3189,7 +3189,7 @@
                                                 <a href="company.html" class="index-more">-会社概要</a>
                                                 <a href="company/message.html" class="index-more">-トップメッセージ</a>
                                                 <a href="company/mission.html" class="index-more">-グループビジョン・経営理念</a>
-                                                <a href="company/group.html" class="index-more">-グループ企業一覧</a>
+                                                <a href="company.html#group-companys" class="index-more">-グループ企業一覧</a>
                                                 <a href="company/partnar.html" class="index-more">-提携先企業一覧</a>
                                               </div>
                                 </li>
@@ -3214,6 +3214,14 @@
                                             <a href="adoption/employee.html" class="index-more">-社員採用</a>
                                             <a href="adoption/part.html" class="index-more">-アルバイト採用</a>
                                           </div>
+                                </li>
+                            </ul>
+                            <ul class="index-main">
+                                <li>
+                                    <div class="accordion">
+                                    <a class="index-text"  href="news.html">ニュース <span class="index-text-english">NEWS</span>
+                                    </a>
+                                      </div>
                                 </li>
                             </ul>
                             <ul class="index-main">
@@ -3511,7 +3519,7 @@
                                     <a href="company.html" class="index-more">-会社概要</a>
                                     <a href="company/message.html" class="index-more">-トップメッセージ</a>
                                     <a href="company/mission.html" class="index-more">-グループビジョン・経営理念</a>
-                                    <a href="company/group.html" class="index-more">-グループ企業一覧</a>
+                                    <a href="company.html#group-companys" class="index-more">-グループ企業一覧</a>
                                     <a href="company/partnar.html" class="index-more">-提携先企業一覧</a>
                                   </div>
                     </li>
@@ -3536,6 +3544,14 @@
                                 <a href="adoption/employee.html" class="index-more">-社員採用</a>
                                 <a href="adoption/part.html" class="index-more">-アルバイト採用</a>
                               </div>
+                    </li>
+                </ul>
+                <ul class="footer-index">
+                    <li>
+                        <div class="accordion">
+                        <a class="index-text"  href="news.html">ニュース <span class="index-text-english">NEWS</span>
+                        </a>
+                          </div>
                     </li>
                 </ul>
                 <ul class="footer-index">
