--- a/company/group.html
+++ b/company/group.html
@@ -446,7 +446,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                           <a href="../company.html" class="index-more">-会社概要</a>
                                             <a href="../company/message.html" class="index-more">-トップメッセージ</a>
                                             <a href="../company/mission.html" class="index-more">-グループビジョン・経営理念</a>
-                                            <a href="../company/group.html" class="index-more">-グループ企業一覧</a>
+                                            <a href="../company.html#group-companys" class="index-more">-グループ企業一覧</a>
                                             <a href="../company/partnar.html" class="index-more">-提携先企業一覧</a>
                                           </div>
                             </li>
@@ -476,6 +476,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                         <a href="../adoption/employee.html" class="index-more">-社員採用</a>
                                         <a href="../adoption/part.html" class="index-more">-アルバイト採用</a>
                                       </div>
+                            </li>
+                        </ul>
+                        <ul class="index-main">
+                            <li>
+                                <div class="accordion">
+                                <a class="index-text"  href="../news.html">ニュース <span class="index-text-english">NEWS</span>
+                                </a>
+                                  </div>
                             </li>
                         </ul>
                        <ul class="index-main">
@@ -828,7 +836,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <a href="../company.html" class="index-more">-会社概要</a>
                         <a href="../company/message.html" class="index-more">-トップメッセージ</a>
                         <a href="../company/mission.html" class="index-more">-グループビジョン・経営理念</a>
-                        <a href="../company/group.html" class="index-more">-グループ企業一覧</a>
+                        <a href="../company.html#group-companys" class="index-more">-グループ企業一覧</a>
                         <a href="../company/partnar.html" class="index-more">-提携先企業一覧</a>
                       </div>
         </li>
@@ -853,6 +861,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <a href="../adoption/employee.html" class="index-more">-社員採用</a>
                     <a href="../adoption/part.html" class="index-more">-アルバイト採用</a>
                   </div>
+        </li>
+    </ul>
+    <ul class="footer-index">
+        <li>
+            <div class="accordion">
+            <a class="index-text"  href="../news.html">ニュース <span class="index-text-english">NEWS</span>
+            </a>
+              </div>
         </li>
     </ul>
     <ul class="footer-index">
