--- a/company/summary.html
+++ b/company/summary.html
@@ -59,7 +59,7 @@
                                   <a href="../company.html" class="index-more">-会社概要</a>
                                     <a href="../company/message.html" class="index-more">-トップメッセージ</a>
                                     <a href="../company/mission.html" class="index-more">-グループビジョン・経営理念</a>
-                                    <a href="../company/group.html" class="index-more">-グループ企業一覧</a>
+                                    <a href="../company.html#group-companys" class="index-more">-グループ企業一覧</a>
                                     <a href="../company/partnar.html" class="index-more">-提携先企業一覧</a>
                                   </div>
                     </li>
@@ -91,6 +91,14 @@
                               </div>
                     </li>
                 </ul>
+                <ul class="index-main">
+                  <li>
+                      <div class="accordion">
+                      <a class="index-text"  href="../news.html">ニュース <span class="index-text-english">NEWS</span>
+                      </a>
+                        </div>
+                  </li>
+              </ul>
                <ul class="index-main">
                     <li>
                         <div class="accordion">
@@ -1099,7 +1107,7 @@
                               <a href="../company.html" class="index-more">-会社概要</a>
                               <a href="../company/message.html" class="index-more">-トップメッセージ</a>
                               <a href="../company/mission.html" class="index-more">-グループビジョン・経営理念</a>
-                              <a href="../company/group.html" class="index-more">-グループ企業一覧</a>
+                              <a href="../company.html#group-companys" class="index-more">-グループ企業一覧</a>
                               <a href="../company/partnar.html" class="index-more">-提携先企業一覧</a>
                             </div>
               </li>
@@ -1126,6 +1134,14 @@
                         </div>
               </li>
           </ul>
+          <ul class="footer-index">
+            <li>
+                <div class="accordion">
+                <a class="index-text"  href="../news.html">ニュース <span class="index-text-english">NEWS</span>
+                </a>
+                  </div>
+            </li>
+        </ul>
           <ul class="footer-index">
               <li>
                   <div class="accordion">
