--- a/company/message.html
+++ b/company/message.html
@@ -429,6 +429,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   
           <nav class="header-under">
               <div class="index">
+                <div class="header-inner-img">
+                  <img src="../img/Rewrite_logo_only.png" width="40px" alt="">
+                </div>
                   <ul class="top index-main">
                       <li>
                           <a class="index-text" href="../index.html">ホーム <span class="index-text-english"> HOME</span>
@@ -541,31 +544,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 
-<nav class="items-justified-center wp-block-navigation is-content-justification-center is-layout-flex wp-container-core-navigation-is-layout-1 wp-block-navigation-is-layout-flex" aria-label="companyNav">
-  <ul class="wp-block-navigation__container items-justified-center wp-block-navigation">
-    <div class="container-upper">
-      <li class=" wp-block-navigation-item wp-block-navigation-link">
-        <a class="wp-block-navigation-item__content"  href="../company.html"><span class="wp-block-navigation-item__label">会社概要</span>
-        </a>
-      </li>
-      <li class=" wp-block-navigation-item current-menu-item wp-block-navigation-link">
-        <a class="wp-block-navigation-item__content"  href="../company/message.html" aria-current="page"><span class="wp-block-navigation-item__label">トップメッセージ</span>
-        </a>
-      </li>
-
-    </div>
-    <div class="container-downer">
-      <li class=" wp-block-navigation-item wp-block-navigation-link">
-        <a class="wp-block-navigation-item__content"  href="../company/mission.html"><span class="wp-block-navigation-item__label">ビジョン</span>
-        </a>
-      </li>
-      <li class=" wp-block-navigation-item wp-block-navigation-link">
-        <a class="wp-block-navigation-item__content"  href="../company.html#group-companys"><span class="wp-block-navigation-item__label">グループ企業</span>
-        </a>
-      </li>
-    </div>
-  </ul>
-</nav>
+<nav class="items-justified-center wp-block-navigation is-content-justification-center is-layout-flex wp-container-core-navigation-is-layout-1 wp-block-navigation-is-layout-flex" aria-label="companyNav"><ul class="wp-block-navigation__container items-justified-center wp-block-navigation"><li class=" wp-block-navigation-item wp-block-navigation-link"><a class="wp-block-navigation-item__content" href="../company.html"><span class="wp-block-navigation-item__label">会社概要</span></a></li><li class=" wp-block-navigation-item wp-block-navigation-link"><a class="wp-block-navigation-item__content" href="../company.html#exective-members"><span class="wp-block-navigation-item__label">グループ役員</span></a></li><li class=" wp-block-navigation-item wp-block-navigation-link"><a class="wp-block-navigation-item__content" href="../company.html#group-companys"><span class="wp-block-navigation-item__label">グループ企業</span></a></li><li class=" wp-block-navigation-item current-menu-item wp-block-navigation-link"><a class="wp-block-navigation-item__content" href="../company/message.html" aria-current="page"><span class="wp-block-navigation-item__label">代表挨拶</span></a></li><li class=" wp-block-navigation-item wp-block-navigation-link"><a class="wp-block-navigation-item__content" href="../company/mission.html"><span class="wp-block-navigation-item__label">ビジョン</span></a></li></ul></nav>
 
 
 
