--- a/adoption/about-work.html
+++ b/adoption/about-work.html
@@ -41,6 +41,9 @@
     
             <nav class="header-under">
                 <div class="index">
+                    <div class="header-inner-img">
+                        <img src="../img/Rewrite_logo_only.png" width="40px" alt="">
+                      </div>
                     <ul class="top index-main">
                         <li>
                             <a class="index-text" href="../index.html">ホーム <span class="index-text-english"> HOME</span>
