--- a/company.html
+++ b/company.html
@@ -43,6 +43,10 @@
 
         <nav class="header-under">
             <div class="index">
+              <div class="header-inner-img">
+                <img src="img/Rewrite_logo_only.png" width="40px" alt="">
+
+              </div>
                 <ul class="top index-main">
                     <li>
                         <a class="index-text" href="index.html">ホーム <span class="index-text-english">HOME</span>
@@ -1370,6 +1374,9 @@
                         </div>
               </li>
           </ul>
+      </div>
+      <div class="privacy-policy">
+        <a class="l-footer__contact__link thd_mod-arw__link --wh --large privacy-policy-text" href="index/privacy-policy.html">プライバシーポリシー</a>
       </div>
           <div class="copyright-tab">
               <a href="#"><img src="img/logo-background-none.png" alt=""></a><br>
