--- a/company/mission.html
+++ b/company/mission.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="icon" href="../img/Rewrite_logo_only.png" type="image/png">
 </head>
-<body>
+<body class="vision-body">
   <header>
     <div class="header-all">
         <div class="header-upper">
@@ -40,6 +40,9 @@
 
         <nav class="header-under">
             <div class="index">
+              <div class="header-inner-img">
+                <img src="../img/Rewrite_logo_only.png" width="40px" alt="">
+              </div>
                 <ul class="top index-main">
                     <li>
                         <a class="index-text" href="../index.html">ホーム <span class="index-text-english"> HOME</span>
@@ -115,39 +118,13 @@
         </nav>
     </div>
 </header>
-    <main class="l-main">
+    <main class="l-main vision-main">
 
       <div class="wp-block-snow-monkey-blocks-section smb-section smb-section--fit thd_mod-lower_header"><div class="smb-section__inner"><div class="c-container"><div class="smb-section__contents-wrapper"><div class="smb-section__header"><h1 class="smb-section__title">COMPANY</h1><div class="smb-section__lede-wrapper"><div class="smb-section__lede">会社情報</div></div></div><div class="smb-section__body is-layout-constrained wp-block-section-is-layout-constrained"></div></div></div></div></div>
 
 
 
-      <nav class="items-justified-center wp-block-navigation is-content-justification-center is-layout-flex wp-container-core-navigation-is-layout-1 wp-block-navigation-is-layout-flex" aria-label="companyNav">
-
-        <ul class="wp-block-navigation__container items-justified-center wp-block-navigation">
-          <div class="container-upper">
-          
-            <li class=" wp-block-navigation-item wp-block-navigation-link">
-              <a class="wp-block-navigation-item__content" href="../company.html"><span class="wp-block-navigation-item__label">会社概要</span>
-              </a>
-            </li>
-            <li class=" wp-block-navigation-item wp-block-navigation-link">
-              <a class="wp-block-navigation-item__content" href="../company/message.html"><span class="wp-block-navigation-item__label">トップメッセージ</span>
-              </a>
-            </li>
-          </div>
-          <div class="container-downer">
-
-            <li class=" wp-block-navigation-item current-menu-item wp-block-navigation-link">
-              <a class="wp-block-navigation-item__content" href="../company/mission.html" aria-current="page"><span class="wp-block-navigation-item__label">ビジョン</span>
-              </a>
-            </li>
-            <li class=" wp-block-navigation-item wp-block-navigation-link">
-              <a class="wp-block-navigation-item__content" href="../company.html#group-companys"><span class="wp-block-navigation-item__label">グループ企業</span>
-              </a>
-            </li>
-          </div>
-          </ul>
-          </nav>
+      <nav class="items-justified-center wp-block-navigation is-content-justification-center is-layout-flex wp-container-core-navigation-is-layout-1 wp-block-navigation-is-layout-flex" aria-label="companyNav"><ul class="wp-block-navigation__container items-justified-center wp-block-navigation"><li class=" wp-block-navigation-item wp-block-navigation-link"><a class="wp-block-navigation-item__content" href="../company.html"><span class="wp-block-navigation-item__label">会社概要</span></a></li><li class=" wp-block-navigation-item wp-block-navigation-link"><a class="wp-block-navigation-item__content" href="../company.html#exective-members"><span class="wp-block-navigation-item__label">グループ役員</span></a></li><li class=" wp-block-navigation-item wp-block-navigation-link"><a class="wp-block-navigation-item__content" href="../company.html#group-companys"><span class="wp-block-navigation-item__label">グループ企業</span></a></li><li class=" wp-block-navigation-item wp-block-navigation-link"><a class="wp-block-navigation-item__content" href="../company/message.html"><span class="wp-block-navigation-item__label">代表挨拶</span></a></li><li class=" wp-block-navigation-item current-menu-item wp-block-navigation-link"><a class="wp-block-navigation-item__content" href="../company/mission.html" aria-current="page"><span class="wp-block-navigation-item__label">ビジョン</span></a></li></ul></nav>
 
         <!-- kv -->
         <div class="m-kv m-kv--mission">
