--- a/company.html
+++ b/company.html
@@ -28,7 +28,7 @@
                 <p class="logo-text">株式会社リライトホールディングス</p> 
             </div>
             <!-- <span class="material-icons" id="open-btn">menu</span> -->
-            <span class="material-icons" id="close-btn">
+            <span class="material-icons close-btn-text" id="close-btn">
                 close
             </span>
         </div>
@@ -44,7 +44,7 @@
         <nav class="header-under">
             <div class="index">
               <div class="header-inner-img">
-                <img src="img/Rewrite_logo_only.png" width="40px" alt="">
+                <img src="img/Rewrite_logo_only.png" width="60px" alt="">
 
               </div>
                 <ul class="top index-main">
